+ Implemented HTML Purifier filter for all user input. This will give us STRONG protection against all kinds of XSS attacks, while preserving rich formating options. It will also enhance well formedness.
+ Implemented some Content-Security-Protection header options. No framing,only load css from same origin, only load .js files from same origin, only load images from same origin

Collabtive 1.2
+ Added translations: Vietnamese
+ Improved translations: Spanish
+ Added collapsible tree showing the structure of a project (milestones, tasklists, tasks, messages)
+ Removed Basecamp importer (didn't work in a long time, see https://github.com/philippK-de/Collabtive/issues/2 )
+ Milestones can now have a start date set when created. Start date can also be edited.
+ Removed links to the my-projects/tasks/messages blocks in block titles on the desktop
+ Milestones can now be deleted asynchronously
+ Milestones can now be closed asynchronously
+ Milestones are now grouped into "current" , "late"  and "upcoming" milestones in project->milestones
+ Closed tasklists now receive their own white bg block in projects->tasklists. Better sets the block apart from active tl's
+ Removed tags from the add message form. Tags will be removed from Collabtive in order to simplify things.
+ Removed file upload from the add message form. Now only previously uploaded files can be attached to messages.
+ Implemented tree view for projects
+ Fixed display problem with Smarty where pages weren't listed as before
+ Improved notification emails. They are now much more informative / better localized (StephanRichter)
+ Implemented iCal auth (StephanRichter)
+ Fixed bug where certain dates (like 1.9.2013) could not be selected in date picker (StephanRichter)
+ Added htaccess file to deny folder listing in the file folder (StephanRichter)
+ Switched from a background-color gradient to a solid color